--- a/wildcatweb/src/features/commandPanel/dashboards/motor/styles/MotorDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/motor/styles/MotorDash.module.css
@@ -112,7 +112,7 @@
     flex: 1;
     margin: 0 2px;
     border-radius: 2px 2px 0 0;
-    background-color: var(--color-gray-subtle);
+    background-color: var(--color-gray-bold);
     cursor: pointer;
     border: none;
     transition: all var(--transition-normal);
@@ -144,13 +144,13 @@
 }
 
 .clockwiseBar {
-    background-color: var(--color-gray-subtle);
+    background-color: var(--color-gray-bold);
 }
 
 
 
 .stopBar {
-    background-color: var(--color-gray-subtle);
+    background-color: var(--color-gray-bold);
 }
 
 .stopBar svg{
@@ -183,11 +183,11 @@
 }
 
 .clockwiseBar  svg {
-    color: var(--color-motor-clockwise);
+    color: var(--color-background); 
 }
 
 .countercwBar {
-    background: var(--color-gray-subtle);
+    background: var(--color-gray-bold);
 }
 
 .countercwBar.active {
@@ -200,7 +200,7 @@
 }
 
 .countercwBar  svg {
-    color: var(--color-motor-countercw);
+    color: var(--color-background); 
 }
 
 /* For icons that need to be flipped horizontally */
