--- a/wildcatweb/src/features/commandPanel/dashboards/timer/styles/TimeDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/timer/styles/TimeDash.module.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: var(--spacing-2);
     width: 100%;
     max-width: 400px;
     margin: 0 auto;
@@ -183,20 +182,20 @@
 
 /* Base Ten block visualization */
 .baseTenContainer {
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
+    margin: 0 var(--spacing-4);
     
     overflow: hidden;
-    background-color: var(--color-gray-faint);
+    background-color: var(--color-gray-subtle);
     border-radius: var(--radius-md);
     padding: var(--spacing-2);
 
     --block-size: 12px;
 
-    height: calc(calc(var(--block-size) * 10) + calc(var(--spacing-1) * 5));
+    height: calc(calc(var(--block-size) * 10) + calc(var(--spacing-1) * 7));
 }
 
 .baseTenBlocks {
